# ICS637_Final

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
ics637_final/: __init__.py  dataset.py  features.py  plots.py
ics637_final/modeling/: predict.py  train.py
models/: AE.py  config.py  dataset.py  inference.py  train.py
